<resources>
    <string name="app_name">exp4 My Application</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="age">Age:</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="country">Country:</string>
    <string name="select_your_country">Select your country</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="select_your_date_of_birth">Select your date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="submit">Submit</string>
</resources>